--- a/styles.css
+++ b/styles.css
@@ -2,35 +2,59 @@ body {
     background-color: #000f;
 }
 
+button {
+    border: none;
+    background-color: #0000;
+    cursor: pointer;
+}
+
+th, td {
+    border: 0.5px solid #ccc;
+    text-align: left;
+}
+
+div.scroll {
+    margin: 4px, 4px;
+    padding: 4px;
+    width: 100%;
+    overflow: auto;
+    white-space: nowrap;
+}
+
 div.topbar {
     z-index: 2;
     height: 50px;
+    padding: 12px;
     background-color: #cccf;
 }
 
+div.centerbar {
+    background-color: #eeef;
+}
+
 div.leftbar {
-    z-index: 2;
-    width: 150px;
+    width: 50px;
     min-height: 50px;
+    padding: 12px;
     background-color: #eeef;
 }
 
 div.rightbar {
-    z-index: 2;
-    width: 250px;
+    width: 50px;
     min-height: 50px;
+    padding: 12px;
     background-color: #eeef;
 }
 
 div.bottombar {
-    z-index: 2;
     min-height: 30px;
     color: #ffff;
+    padding: 12px;
     background-color: #000f;
 }
 
 div.content {
-    z-index: 1;
     min-height: 50px;
+    padding: 12px;
     background-color: #ffff;
 }
