--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,18 @@ button {
     cursor: pointer;
 }
 
+button.inner {
+    border: 1px solid #ccc;
+    margin: 4px;
+}
+
 th, td {
     border: 0.5px solid #ccc;
     text-align: left;
 }
 
 div.scroll {
-    margin: 4px, 4px;
+    margin: 4px;
     padding: 4px;
     width: 100%;
     overflow: auto;
